# backup-Polycode

./: CMakeLists.txt
Assets/Templates/C++/Xcode/PolycodeTemplate/en.lproj/: MainMenu.xib
Bindings/Contents/LUA/API/: Polycode.lua  api.pak
Bindings/Contents/LUA/API/Polycode/: Camera.lua  Color.lua  Core.lua  Entity.lua  Image.lua  Material.lua  MaterialManager.lua  Matrix4.lua  ObjectEntry.lua  ParticleEmitter.lua  Renderer.lua  Scene.lua  SceneLine.lua  SceneMesh.lua  SceneParticleEmitter.lua  SceneRenderTexture.lua  Screen.lua  ScreenEntity.lua  ScreenParticleEmitter.lua  Sound.lua  Timer.lua  Vector2.lua  Vector3.lua
Bindings/Contents/LUA/Include/: PolycodeLUAWrappers.h
Bindings/Contents/LUA/Source/: PolycodeLUA.cpp
Bindings/Scripts/create_lua_library/: CMakeLists.txt  create_lua_library.py
CMake/: ExternalBullet.cmake  ExternalOggVorbis.cmake  ExternalOpenAL.cmake  ExternalPNG.cmake  PolycodeIncludes.cmake  lua51.cmake  zlib.cmake
Core/Contents/: CMakeLists.txt
Core/Contents/Include/: PolyConfig.h  PolyCoreInput.h  PolyCoreServices.h  PolyEntity.h  PolyFixedShader.h  PolyFontManager.h  PolyGLHeaders.h  PolyGLRenderer.h  PolyGLSLProgram.h  PolyImage.h  PolyInputEvent.h  PolyLabel.h  PolyMatrix4.h  PolyMesh.h  PolyObject.h  PolyParticleEmitter.h  PolyRenderer.h  PolyResourceManager.h  PolyScene.h  PolySceneLine.h  PolySceneManager.h  PolySceneMesh.h  PolySceneRenderTexture.h  PolyScreen.h  PolyScreenManager.h  PolyScreenMesh.h  PolyShader.h  PolySkeleton.h  PolySound.h  PolySoundManager.h  PolyTimerManager.h  PolyTween.h  PolyTweenManager.h
Core/Contents/Source/: PolyCamera.cpp  PolyCocoaCore.mm  PolyCore.cpp  PolyCoreServices.cpp  PolyFont.cpp  PolyGLRenderer.cpp  PolyGLSLShader.cpp  PolyGLSLShaderModule.cpp  PolyGLTexture.cpp  PolyImage.cpp  PolyMatrix4.cpp  PolyMesh.cpp  PolyScene.cpp  PolySceneMesh.cpp  PolyScreen.cpp  PolyScreenLabel.cpp  PolyScreenMesh.cpp  PolySound.cpp  PolyString.cpp  PolyWinCore.cpp
Modules/Bindings/2DPhysics/: CMakeLists.txt
Modules/Bindings/2DPhysics/API/Physics2D/: PhysicsScreen.lua  PhysicsScreenEvent.lua
Modules/Bindings/2DPhysics/Include/: Physics2DLUAWrappers.h
Modules/Bindings/2DPhysics/Source/: Physics2DLUA.cpp
Modules/Bindings/3DPhysics/: CMakeLists.txt
Modules/Bindings/3DPhysics/API/: Physics3D.lua
Modules/Bindings/3DPhysics/API/Physics3D/: CollisionScene.lua  PhysicsScene.lua  PhysicsSceneEntity.lua
Modules/Bindings/3DPhysics/Include/: Physics3DLUAWrappers.h
Modules/Bindings/3DPhysics/Source/: Physics3DLUA.cpp
Modules/Contents/2DPhysics/Include/: PolyPhysicsScreen.h  PolyPhysicsScreenEntity.h
Modules/Contents/2DPhysics/Source/: PolyPhysicsScreen.cpp  PolyPhysicsScreenEntity.cpp
Modules/Contents/3DPhysics/Include/: PolyCollisionScene.h  PolyPhysicsScene.h  PolyPhysicsSceneEntity.h
Modules/Contents/3DPhysics/Source/: PolyCollisionScene.cpp  PolyCollisionSceneEntity.cpp  PolyPhysicsScene.cpp  PolyPhysicsSceneEntity.cpp
Modules/Contents/Networking/Include/: PolyClient.h  PolyPeer.h  PolyServer.h  PolyServerWorld.h  PolySocket.h
Modules/Contents/UI/Include/: PolyUIBox.h  PolyUIButton.h  PolyUICheckBox.h  PolyUIColorBox.h  PolyUIComboBox.h  PolyUIEvent.h  PolyUIHScrollBar.h  PolyUIHSlider.h  PolyUIImageButton.h  PolyUIScrollContainer.h  PolyUITextInput.h  PolyUITree.h  PolyUITreeContainer.h  PolyUITreeEvent.h  PolyUIWindow.h
Player/Contents/: CMakeLists.txt
Player/Contents/Platform/Darwin/: MyDocument.xib
Player/Contents/Platform/Darwin/Standalone/: MainMenu.xib
Standalone/: CMakeLists.txt
